[metadata]
name = scality-manila-utils
author = Scality SA
author-email = openstack-eng@scality.com
summary = Utilities package for the Scality OpenStack Manila driver
description-file =
    README.rst
home-page = https://github.com/scality/scality-manila-utils
license = Apache-2
classifier =
    Development Status :: 1 - Alpha
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    scality_manila_utils

[nosetests]
verbosity = 2
detailed-errors = true
with-coverage = true
cover-package = scality_manila_utils
cover-html = true
cover-erase = true
cover-inclusive = true
cover-branches = true
cover-min-percentage = 80
with-doctest = true
processes = -1

[flake8]
show-source = true
